# BlueBird-Editor

./: Architecture.drawio  Cargo.toml  README.md
assets/: app.js  app.py
assets/js_modules/: designer.ts  tsconfig.json
src/: dock_manager.rs  extensions.rs  js_native_module.rs  main.rs  main1.rs  project_window.rs
src/backend/: commands.rs  counter.rs  message_bus.rs  mod.rs  plugin.rs
src/backend/plugins/: event_interceptor.rs  file_manager.rs  logger.rs  mod.rs  project_manager.rs  window_manager.rs
src/ui/: javascript_widget.rs  mod.rs
src/ui/pages/: file_manager.rs  library_window.rs  logger_window.rs  mod.rs  welcome_page.rs
