[package]
name = "bluebird_ide"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
eframe = { version = "0.28.1", features = ["persistence"] }
egui = { version = "0.28.1", features = ["accesskit", "color-hex", "persistence"] }
egui-file-dialog = "0.6.0"
egui_dock = { version = "0.13.0", features = ["serde"] }
egui_extras = { version = "0.28.1", features = ["file", "http", "image", "svg"] }
egui_hooks = { version = "0.5.0", features = ["persistence"] }
env_logger = "0.11.5"
log = "0.4.22"
rquickjs = { version = "0.6.2", features = ["loader", "macro"] }
serde = { version = "1.0.210", features = ["serde_derive"] }
serde_json = "1.0.128"
winit = "0.30.5"
# winit = "0.29.15"
# quickjs_runtime = "0.13.4"
